--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./bin/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "dev": "nodemon ./src/app.ts"
   },
   "dependencies": {
+    "@2600hz/commio-native-utilities": "^0.5.2",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.16",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.1"
   },
   "license": "MIT"
