--- a/package.json
+++ b/package.json
@@ -6,21 +6,38 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./bin/app.js",
-    "dev": "nodemon ./src/app.ts"
+    "start": "node ./bin/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q bin/index.js\"",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "typescript": "tsc --noEmit",
+    "full-check": "yarn run format:write && yarn run lint:fix && yarn run typescript"
   },
   "dependencies": {
     "@2600hz/commio-native-utilities": "^0.5.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "concurrently": "^7.2.2",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1"
