--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "typescript": "tsc --noEmit",
-    "full-check": "yarn run format:write && yarn run lint:fix && yarn run typescript"
+    "prettify": "yarn run format:write && yarn run lint:fix",
+    "full-check": "yarn run prettify && yarn run typescript",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@2600hz/commio-native-utilities": "^0.5.2",
@@ -36,7 +39,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.1",
+    "husky": "^7.0.0",
     "lint-staged": "^13.0.2",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.1",
