--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@services": "bin/services",
     "@controllers": "bin/controllers",
     "@repository": "bin/repository",
-    "@routers": "bin/routers"
+    "@routers": "bin/routers",
+    "@routes": "bin/routes"
   },
   "dependencies": {
     "@2600hz/commio-native-utilities": "^0.5.2",
@@ -41,13 +42,14 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "concurrently": "^7.2.2",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^13.0.2",
