--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV="development"
 PORT=9001
+DATABASE_URL=mongodb+srv://mern_calendar_user:hbBlIbaFpvC4NsBi@calendardb.b1rbw.mongodb.net/mern_calendar_db
