--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@modules": "bin/modules",
     "@services": "bin/services",
     "@controllers": "bin/controllers",
+    "@middleware": "bin/middleware",
+    "@database": "bin/database",
     "@repository": "bin/repository",
     "@routers": "bin/routers",
     "@routes": "bin/routes"
@@ -31,7 +33,9 @@
     "@2600hz/commio-native-utilities": "^0.5.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "module-alias": "^2.2.2",
+    "mongoose": "^6.4.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
