test: Adding latest Controller stuff and saving before returning mac

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV="development"
 PORT=9001
+HEADER_TOKEN_STRING=X-REQUEST-TOKEN
 DATABASE_URL=mongodb+srv://mern_calendar_user:hbBlIbaFpvC4NsBi@calendardb.b1rbw.mongodb.net/mern_calendar_db
+SECRET_JWT_SEED=VA9AhiWDT7Ww5WdUctP0Vjr+cHAcRL24a8YnB8SqFBk=
