--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
       "@middleware/*": ["middleware/*"],
       "@database/*": ["database/*"],
       "@repository/*": ["repository/*"],
+      "@helpers/*": ["helpers/*"],
       "@routers/*": ["routers/*"],
       "@routes/*": ["routes/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
