--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@middleware": "bin/middleware",
     "@database": "bin/database",
     "@repository": "bin/repository",
+    "@helpers": "bin/helpers",
     "@routers": "bin/routers",
     "@routes": "bin/routes"
   },
   "dependencies": {
     "@2600hz/commio-native-utilities": "^0.5.2",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
     "typescript": "^4.7.4"
@@ -43,7 +46,9 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
